--- a/winter_2024/hw0_release/hw0.ipynb
+++ b/winter_2024/hw0_release/hw0.ipynb
@@ -12,9 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports the print function from newer versions of python\n",
     "from __future__ import print_function\n",
@@ -91,12 +100,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M = \n",
+      " [[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n",
+      "The size of M is:  (4, 3)\n",
+      "\n",
+      "a =  [[1 1 0]]\n",
+      "The size of a is:  (1, 3)\n",
+      "\n",
+      "b =  [[-1]\n",
+      " [ 2]\n",
+      " [ 5]]\n",
+      "The size of b is:  (3, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "### YOUR CODE HERE\n",
-    "pass\n",
+    "M = np.array([\n",
+    "    [1, 2, 3], \n",
+    "    [4, 5, 6], \n",
+    "    [7, 8, 9], \n",
+    "    [10, 11, 12]\n",
+    "    ])\n",
+    "\n",
+    "a = np.array([\n",
+    "    [1, 1, 0]\n",
+    "    ])\n",
+    "\n",
+    "b = np.array([\n",
+    "    [-1],\n",
+    "    [2],\n",
+    "    [5]\n",
+    "])\n",
     "### END CODE HERE\n",
     "print(\"M = \\n\", M)\n",
     "print(\"The size of M is: \", M.shape)\n",
@@ -118,9 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]]\n",
+      "The size is:  (1, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Now, let's test out this dot product. Your answer should be [[1]].\n",
     "aDotB = dot_product(a, b)\n",
@@ -143,9 +197,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3]\n",
+      " [ 9]\n",
+      " [15]\n",
+      " [21]]\n",
+      "\n",
+      "The size is:  (4, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Your answer should be $[[3], [9], [15], [21]]$ of shape(4, 1).\n",
     "ans = complicated_matrix_function(M, a, b)\n",
@@ -156,9 +223,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 2)\n",
+      "(1, 2)\n",
+      "(2, 1)\n",
+      "\n",
+      "[[ 20]\n",
+      " [100]]\n",
+      "\n",
+      "The size is:  (2, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "M_2 = np.array(range(4)).reshape((2,2))\n",
     "a_2 = np.array([[1,1]])\n",
@@ -191,9 +273,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First eigenvalue = 16.116843969807043\n",
+      "\n",
+      "First eigenvector = [-0.23197069]\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFirst eigenvector =\u001b[39m\u001b[38;5;124m\"\u001b[39m, vec[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(vec) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Now, let's get the first two eigenvalues and eigenvectors.\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# You should get back a list of two eigenvalues and a list of two eigenvector arrays.\u001b[39;00m\n\u001b[0;32m     15\u001b[0m val, vec \u001b[38;5;241m=\u001b[39m get_eigen_values_and_vectors(M[:,:\u001b[38;5;241m3\u001b[39m], \u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Let's define M.\n",
     "M = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
@@ -205,6 +309,7 @@
     "print()\n",
     "print(\"First eigenvector =\", vec[0])\n",
     "print()\n",
+    "print(vec)\n",
     "assert len(vec) == 1\n",
     "\n",
     "# Now, let's get the first two eigenvalues and eigenvectors.\n",
@@ -625,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
